crates/envoy-config/fuzz/corpus/parse_bootstrap/cluster_lb_subset.yaml
node:
  id: fuzz-subset
  cluster: fuzz
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: http1_listener
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: HTTP1
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: subset_vh
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: subset_cluster
                            metadata_match:
                              filter_metadata:
                                envoy.lb: { stage: prod }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: subset_cluster
      type: STATIC
      lb_policy: ROUND_ROBIN
      lb_subset_config:
        fallback_policy: NO_FALLBACK
        subset_selectors:
          - keys: [stage]
        default_subset: { stage: prod }
      load_assignment:
        cluster_name: subset_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 172.22.0.2
                      port_value: 5678
                metadata:
                  filter_metadata:
                    envoy.lb: { stage: prod, version: v2 }
              - endpoint:
                  address:
                    socket_address:
                      address: 172.22.0.3
                      port_value: 5678
                metadata:
                  filter_metadata:
                    envoy.lb: { stage: canary, version: v1 }
